pages folders created

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,20 @@ code {
   src: local('Gladioss-Feather'),
     url('./fonts/Gladioss-Feather.otf') format('truetype');
 }
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
