--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   position: relative;
-  /* background-color: #282828; */
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -54,4 +54,8 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
